# kartenforum_georeference

./: .coverage  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  API.md  README.md  backup_new.sql  development.ini  production.ini  pyproject.toml  pytest.ini  setup.py  testing.ini
alembic/: README  env.py  script.py.mako
database/: READMD.md  migration.py  test-data.sql  update-sequences.sql  vkdb-migration.sql  vkdb-new.sql  vkdb-new_fix-sequences.sql  vkdb-schema.sql
docker/: Dockerfile  README.md  docker-compose-full.yml  docker-compose.yml  production.ini  settings.py  startup.sh
docker/docker-entrypoint-initdb.d/: 01-init-db.sh  init-db-test.sh  init-db.sh
docker/entrypoints/: run-fastapi.sh  run-job-loop.sh
docs/: GEOREF_SERVICE.md  IMPORT_API.md  JOBS_RUNNER.md  README.md
georeference/: Dockerfile  __init__.py  conftest.py  cors.py  exceptions.py  main.py  routes.py  settings.py
georeference/__test_data/: ASTGTMV003_S83W155_dem_optimized.tif
georeference/config/: constants.py  db.py  logging_config.py  paths.py  sentry.py  settings.py  templates.py
georeference/daemon/: __init__.py  jobs.py  kill-daemon.sh  process.py  runner.py  runner_lifecycle.py  runner_lifecycle_test.py  runner_lifecyle.py  (+1 more)
georeference_tests/: conftest.py  test_simple-two.py  test_simple.py
scripts/: README.md  batch-data-upload.sh  data-upload.sh  download-testdata.sh  downscale-testdata.sh  find-16bit-raster.sh  initialize-testdata.sh  initialize-zoomify-and-thumbnail.sh  initialize_thumbnails.py  initialize_zoomify_tiles.py  package.sh
tmp/: README.md
(+210 files in other folders)
