[tool.poetry]
packages = [{ include = "georeference"}]
name = "Virtuelles Kartenforum"
version = "0.1.0"
description = ""
authors = ["Nicolas Looschen <nicolas.looschen@pikobytes.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
sqlalchemy = "^2.0.31"
gdal = "3.9.0"
pillow = "^10.4.0"
pyproj = "^3.6.1"
psycopg2-binary = "^2.9.9"
shapely = "^2.0.4"
pydantic-settings = "^2.3.4"
debugpy = "^1.8.2"
requests = "^2.32.3"
loguru = "^0.7.2"
geojson-pydantic = "^1.1.0"
lockfile = "^0.12.2"
elasticsearch = "7.14.1"
numpy = "<2"
sentry-sdk = {extras = ["loguru"], version = "^2.12.0"}
python-daemon = "^3.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
testcontainers = {extras = ["postgres"], version = "^4.7.1"}
pytest-testmon = "^2.1.1"
pytest-xdist = "^3.6.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "^3.7.1"
debugpy = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
